# Tray

./: .clangd  .gitignore  CMakeLists.txt  INTERFACES  main.cpp
src/: core.hpp  dbus.hpp  dbus2.hpp  dbus_pack.hpp  dbus_unpack.hpp  dbus_value.hpp  enums.hpp  icon.cpp  icon.hpp  service.cpp  tray.cpp
